--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
-    "expo-dev-client": "~2.2.1",
     "expo": "~48.0.18",
+    "expo-app-loading": "^2.1.1",
+    "expo-dev-client": "~2.2.1",
+    "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-linear-gradient": "~12.1.2"
+    "react-native-uuid": "^2.0.1",
+    "react-native-video": "^5.2.1",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
